synced the fork with latest updates

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,20 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{tiwary2024langdaug,
+  abbr={ICML},
+  bibtex_show={true},
+  title={LangDAug: Langevin Data Augmentation for Multi-Source Domain Generalization in Medical Image Segmentation},
+  author={Tiwary, Piyush and Bhattacharyya, Kinjawl and AP, Prathosh},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2025},
+  url={https://openreview.net/forum?id=LB5F02kwAv},
+  html={https://openreview.net/forum?id=LB5F02kwAv},
+  abstract={Medical image segmentation models often struggle to generalize across different domains due to various reasons. Domain Generalization (DG) methods overcome this either through representation learning or data augmentation (DA). While representation learning methods seek domain-invariant features, they often rely on ad-hoc techniques and lack formal guarantees. DA methods, which enrich model representations through synthetic samples, have shown comparable or superior performance to representation learning approaches. We propose LangDAug, a novel Langevin Data Augmentation for multi-source domain generalization in 2D medical image segmentation. LangDAug leverages Energy-Based Models (EBMs) trained via contrastive divergence to traverse between source domains, generating intermediate samples through Langevin dynamics. Theoretical analysis shows that LangDAug induces a regularization effect, and for GLMs, it upper-bounds the Rademacher complexity by the intrinsic dimensionality of the data manifold. Through extensive experiments on Fundus segmentation and 2D MRI prostate segmentation benchmarks, we show that LangDAug outperforms state-of-the-art domain generalization methods and effectively complements existing domain-randomization approaches.},
+  selected={true},
+  preview={langdaug.jpeg}
+}
+
 @article{tiwary2025adapt,
   abbr={TMLR},
   bibtex_show={true},
@@ -74,7 +88,7 @@
   preview={eta-mu.jpg}}
 
 @article{TIWARY2024103031,
-  abbr={MedIA},
+  abbr={MICCAI-MedIA},
   bibtex_show={true},
   author={Tiwary, Piyush and Bhattacharyya, Kinjawl and AP, Prathosh},
   journal={Medical Image Analysis (MedIA)}, 
