changed html->pdf and use html for project page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   booktitle={International Conference on Machine Learning (ICML)},
   year={2025},
   url={https://openreview.net/forum?id=LB5F02kwAv},
-  html={https://openreview.net/forum?id=LB5F02kwAv},
+  pdf={https://openreview.net/forum?id=LB5F02kwAv},
   abstract={Medical image segmentation models often struggle to generalize across different domains due to various reasons. Domain Generalization (DG) methods overcome this either through representation learning or data augmentation (DA). While representation learning methods seek domain-invariant features, they often rely on ad-hoc techniques and lack formal guarantees. DA methods, which enrich model representations through synthetic samples, have shown comparable or superior performance to representation learning approaches. We propose LangDAug, a novel Langevin Data Augmentation for multi-source domain generalization in 2D medical image segmentation. LangDAug leverages Energy-Based Models (EBMs) trained via contrastive divergence to traverse between source domains, generating intermediate samples through Langevin dynamics. Theoretical analysis shows that LangDAug induces a regularization effect, and for GLMs, it upper-bounds the Rademacher complexity by the intrinsic dimensionality of the data manifold. Through extensive experiments on Fundus segmentation and 2D MRI prostate segmentation benchmarks, we show that LangDAug outperforms state-of-the-art domain generalization methods and effectively complements existing domain-randomization approaches.},
   selected={true},
   preview={langdaug.jpeg}
@@ -27,7 +27,8 @@
   abstract={Owing to the growing concerns about privacy and regulatory compliance, it is desirable to regulate the output of generative models. To that end, the objective of this work is to prevent the generation of outputs containing undesired features from a pre-trained Generative Adversarial Network (GAN) where the underlying training data set is inaccessible. Our approach is inspired by the observation that the parameter space of GANs exhibits meaningful directions that can be leveraged to suppress specific undesired features. However, such directions usually result in the degradation of the quality of generated samples. Our proposed two-stage method, known as 'Adapt-then-Unlearn,' excels at unlearning such undesirable features while also maintaining the quality of generated samples. In the initial stage, we adapt a pre-trained GAN on a set of negative samples (containing undesired features) provided by the user. Subsequently, we train the original pre-trained GAN using positive samples, along with a repulsion regularizer.  This regularizer encourages the learned model parameters to move away from the parameters of the adapted model (first stage) while not degrading the generation quality. We provide theoretical insights into the proposed method. To the best of our knowledge, our approach stands as the first method addressing unlearning within the realm of high-fidelity GANs (such as StyleGAN). We validate the effectiveness of our method through comprehensive experiments, encompassing both class-level unlearning on the MNIST and AFHQ dataset and feature-level unlearning tasks on the CelebA-HQ dataset. Our code and implementation is available at: https://github.com/atriguha/Adapt_Unlearn.},
   keywords={GANs, Unlearning},
   url={https://openreview.net/forum?id=jAHEBivObO&t=1739258832039},
-  html={https://openreview.net/forum?id=jAHEBivObO&t=1739258832039},
+  pdf={https://openreview.net/forum?id=jAHEBivObO&t=1739258832039},
+  html={/projects/1_project/},
   selected={true},
   preview={atu-bd.png}}
 
@@ -42,7 +43,7 @@
   keywords={GANs, Few-shot adaptation},
   doi={10.1109/LSP.2024.3496822},
   url={https://ieeexplore.ieee.org/document/10750383},
-  html={https://ieeexplore.ieee.org/document/10750383},
+  pdf={https://ieeexplore.ieee.org/document/10750383},
   preview={solad.png}}
 
 @article{10623871,
@@ -56,7 +57,7 @@
   keywords={Generalized fading, Localization},
   doi={10.1109/LWC.2024.3439564},
   url={https://ieeexplore.ieee.org/document/10623871},
-  html={https://ieeexplore.ieee.org/document/10623871},
+  pdf={https://ieeexplore.ieee.org/document/10623871},
   preview={alpha-mu.png}}
 
 @inproceedings{tiwary2024bayesian,
@@ -67,7 +68,7 @@
   booktitle={Conference on Uncertainity in Artificial Intelligence (UAI)},
   year={2024},
   url={https://arxiv.org/abs/2303.11278},
-  html={https://arxiv.org/abs/2303.11278},
+  pdf={https://arxiv.org/abs/2303.11278},
   abstract={Bayesian methods provide an elegant framework for estimating parameter posteriors and quantification of uncertainty associated with probabilistic models. However, they often suffer from slow inference times. To address this challenge, Bayesian Pseudo-Coresets (BPC) have emerged as a promising solution. BPC methods aim to create a small synthetic dataset, known as pseudo-coresets, that approximates the posterior inference achieved with the original dataset. This approximation is achieved by optimizing a divergence measure between the true posterior and the pseudo-coreset posterior. Various divergence measures have been proposed for constructing pseudo-coresets, with forward Kullback-Leibler (KL) divergence being the most successful. However, using forward KL divergence necessitates sampling from the pseudo-coreset posterior, often accomplished through approximate Gaussian variational distributions. Alternatively, one could employ Markov Chain Monte Carlo (MCMC) methods for sampling, but this becomes challenging in high-dimensional parameter spaces due to slow mixing. In this study, we introduce a novel approach for constructing pseudo-coresets by utilizing contrastive divergence. Importantly, optimizing contrastive divergence eliminates the need for approximations in the pseudo-coreset construction process. Furthermore, it enables the use of finite-step MCMC methods, alleviating the requirement for extensive mixing to reach a stationary distribution. To validate our method's effectiveness, we conduct extensive experiments on multiple datasets, demonstrating its superiority over existing BPC techniques.},
   selected={false},
   preview={bpc-uai.png}
@@ -84,7 +85,7 @@
   keywords={Generalized fading, Localization, Modified Bessel Function},
   doi={10.1109/TNSE.2023.3342622},
   url={https://ieeexplore.ieee.org/document/10356779},
-  html={https://ieeexplore.ieee.org/document/10356779},
+  pdf={https://ieeexplore.ieee.org/document/10356779},
   preview={eta-mu.jpg}}
 
 @article{TIWARY2024103031,
@@ -99,7 +100,7 @@
   keywords={Energy based models, Image translation, Medical image segmentation},
   doi={https://doi.org/10.1016/j.media.2023.103031},
   url={https://www.sciencedirect.com/science/article/pii/S1361841523002918},
-  html={https://www.sciencedirect.com/science/article/pii/S1361841523002918},
+  pdf={https://www.sciencedirect.com/science/article/pii/S1361841523002918},
   preview={cct-ebm.png}}
 
 
@@ -111,7 +112,7 @@
   booktitle={International Conference on Learning Representation (ICLR)},
   year={2023},
   url={https://openreview.net/forum?id=sCYXJr3QJM8},
-  html={https://openreview.net/forum?id=sCYXJr3QJM8},
+  pdf={https://openreview.net/forum?id=sCYXJr3QJM8},
   abstract={In this work, our objective is to adapt a Deep generative model trained on a large-scale source dataset to multiple target domains with scarce data. Specifically, we focus on adapting a pre-trained Generative Adversarial Network (GAN) to a target domain without re-training the generator. Our method draws the motivation from the fact that out-of-distribution samples can be `embedded' onto the latent space of a pre-trained source-GAN. We propose to train a small latent-generation network during the inference stage, each time a  batch of target samples is to be generated. These target latent codes are fed to the source-generator to obtain  novel target samples. Despite using the same small set of target samples and the source generator, multiple independent training episodes of the latent-generation network results in the diversity of the generated target samples. Our method, albeit simple, can be used to generate data from multiple target distributions using a generator trained on a single source distribution. We demonstrate the efficacy of our surprisingly simple method in generating multiple target datasets with only a single source generator and a few target samples.},
   selected={true},
   preview={genda-iclr.png}
@@ -125,8 +126,8 @@
   author={Mondal, Arnab Kumar and Singhal, Lakshya and Tiwary, Piyush and Singla, Parag and Prathosh, AP},
   booktitle={International Conference on Artificial Intelligence and Statistics (AISTATS)},
   year={2023},
-  url={https://proceedings.mlr.press/v206/mondal23a.html},
-  html={https://proceedings.mlr.press/v206/mondal23a.html},
+  url={https://proceedings.mlr.press/v206/mondal23a.pdf},
+  pdf={https://proceedings.mlr.press/v206/mondal23a.pdf},
   abstract={Class imbalance is a common phenomenon in multiple application domains such as healthcare, where the sample occurrence of one or few class categories is more prevalent in the dataset than the rest. This work addresses the class-imbalance issue by proposing an over-sampling method for the minority classes in the latent space of a Regularized Auto-Encoder (RAE). Specifically, we construct a latent space by maximizing the conditional data likelihood using an Encoder-Decoder structure, such that oversampling through convex combinations of latent samples preserves the class identity. A jointly-trained linear classifier that separates convexly coupled latent vectors from different classes is used to impose this property on the AE's latent space. Further, the aforesaid linear classifier is used for final classification without retraining. We theoretically show that our method can achieve a low variance risk estimate compared to naive oversampling methods and is robust to overfitting. We conduct several experiments on benchmark datasets and show that our method outperforms the existing oversampling techniques for handling class imbalance.},
   selected={true},
   preview={osrae-aistats.jpg}
@@ -141,7 +142,7 @@
   booktitle={NeurIPS 2022 Workshop on Distribution Shifts: Connecting Methods and Applications},
   year={2022},
   url={https://openreview.net/pdf?id=yWf4wxAUcDo},
-  html={https://openreview.net/forum?id=yWf4wxAUcDo},
+  pdf={https://openreview.net/forum?id=yWf4wxAUcDo},
   abstract={In this study, we adapt generative models trained on large source datasets to scarce
 target domains. We adapt a pre-trained Generative Adversarial Network (GAN)
 without retraining the generator, avoiding catastrophic forgetting and over-fitting.
@@ -168,7 +169,7 @@ preview={genda-iclr.png}
   keywords={},
   doi={10.1109/TSP.2022.3183527},
   url={https://ieeexplore.ieee.org/document/9797867},
-  html={https://ieeexplore.ieee.org/document/9797867},
+  pdf={https://ieeexplore.ieee.org/document/9797867},
   ISSN={1941-0476},
   selected={true},
   preview={fadeloc-tsp.png}}
@@ -189,7 +190,7 @@ preview={genda-iclr.png}
     issn = {2641-3337},
     doi = {10.1162/qss_a_00170},
     url = {https://doi.org/10.1162/qss\_a\_00170},
-    html = {https://direct.mit.edu/qss/article-pdf/2/4/1511/2034481/qss\_a\_00170.pdf},
+    pdf = {https://direct.mit.edu/qss/article-pdf/2/4/1511/2034481/qss\_a\_00170.pdf},
 }
 
 
@@ -207,7 +208,7 @@ preview={genda-iclr.png}
   keywords={},  
   doi={10.1109/LSENS.2021.3083500},  
   url = {https://ieeexplore.ieee.org/document/9440753},
-  html = {https://ieeexplore.ieee.org/document/9440753},
+  pdf = {https://ieeexplore.ieee.org/document/9440753},
   ISSN={2475-1472},  
   month={June},}
 
@@ -227,7 +228,7 @@ preview={genda-iclr.png}
   keywords={},
   doi={10.1109/JIOT.2020.3047982},
   url = {https://ieeexplore.ieee.org/document/9310318},
-  html = {https://ieeexplore.ieee.org/document/9310318},
+  pdf = {https://ieeexplore.ieee.org/document/9310318},
   ISSN={2327-4662},
   month={July},}
 
@@ -245,7 +246,7 @@ preview={genda-iclr.png}
   keywords={},
   doi={10.1109/COMSNETS51098.2021.9352896},
   url = {https://ieeexplore.ieee.org/document/9352896},
-  html = {https://ieeexplore.ieee.org/document/9352896},
+  pdf = {https://ieeexplore.ieee.org/document/9352896},
   ISSN={2155-2509},
   month={Jan},}
 
@@ -264,7 +265,7 @@ preview={genda-iclr.png}
   keywords={},
   doi={10.1109/ICCCN49398.2020.9209703},
   url = {https://ieeexplore.ieee.org/document/9209703},
-  html = {https://ieeexplore.ieee.org/document/9209703},
+  pdf = {https://ieeexplore.ieee.org/document/9209703},
   ISSN={2637-9430},
   month={Aug},}
 
@@ -287,7 +288,7 @@ preview={genda-iclr.png}
   location = {Bangalore, India},
   series = {ICDCN '19},
   url = {https://dl.acm.org/doi/10.1145/3288599.3288621},
-  html = {https://dl.acm.org/doi/10.1145/3288599.3288621},
+  pdf = {https://dl.acm.org/doi/10.1145/3288599.3288621},
 }
 
 
@@ -305,7 +306,7 @@ preview={genda-iclr.png}
     url = "https://aclanthology.org/2021.sdp-1.19",
     pages = "140--145",
     url = "https://aclanthology.org/2021.sdp-1.19",
-    html = "https://aclanthology.org/2021.sdp-1.19",
+    pdf = "https://aclanthology.org/2021.sdp-1.19",
     abstract = "Citations are crucial to a scientific discourse. Besides providing additional contexts to research papers, citations act as trackers of the direction of research in a field and as an important measure in understanding the impact of a research publication. With the rapid growth in research publications, automated solutions for identifying the purpose and influence of citations are becoming very important. The 3C Citation Context Classification Task organized as part of the Second Workshop on Scholarly Document Processing @ NAACL 2021 is a shared task to address the aforementioned problems. In this paper, we present our team, IITP-CUNI@3C{'}s submission to the 3C shared tasks. For Task A, citation context purpose classification, we propose a neural multi-task learning framework that harnesses the structural information of the research papers and the relation between the citation context and the cited paper for citation classification. For Task B, citation context influence classification, we use a set of simple features to classify citations based on their perceived significance. We achieve comparable performance with respect to the best performing systems in Task A and superseded the majority baseline in Task B with very simple features.",
 }
 
