corrected html link for tmlr pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   keywords={GANs, Unlearning},
   url={https://openreview.net/forum?id=jAHEBivObO&t=1739258832039},
   pdf={https://openreview.net/forum?id=jAHEBivObO&t=1739258832039},
-  html={/projects/1_project/},
+  html={https://backpropagator.github.io/projects/1_project/},
   selected={true},
   preview={atu-bd.png}}
 
